--- a/create-slurm-cluster-ansible/roles/slurm-controller/handlers/main.yml
+++ b/create-slurm-cluster-ansible/roles/slurm-controller/handlers/main.yml
@@ -4,7 +4,7 @@
     name: slurmdbd
     state: restarted
 
-- name: restart slurmctld
-  service:
-    name: slurmctld
-    state: restarted
+# - name: restart slurmctld
+#   service:
+#     name: slurmctld
+#     state: restarted
